# soil

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/core/: config.py  deps.py  logger.py  security.py
app/db/: session.py
app/middleware/: logging.py
app/models/: journal.py  user.py
app/routers/: journals.py  users.py
app/schemas/: journal.py  user.py
app/scripts/: init_db.py
app/services/: journal.py  user.py
test/locust/: locustTest.py
