[project]
name = "soil"
version = "0.1.0"
description = "Backend for my garden"
authors = [
    { name = "l0o0" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
production = [
    "fastapi>=0.115.12",
]
